rbs-frontend-prod-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rbs-frontend-svc
spec:
  selector:
    app: rbs-frontend-deploy
  ports:
    - port: 80
      targetPort: 3404
  type: LoadBalancer
