cluster-prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: virtual-host-ingress
spec:
  rules:
  - host: rbxrobotica.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rbs-frontend-svc
            port:
              number: 80
  - host: gph.rbxrobotica.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gph-frontend-svc
            port:
              number: 80
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gph-frontend-svc
            port:
              number: 80
