rbs-frontend-prod-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rbs-frontend-ingress
   annotations:
   cert-manager.io/cluster-issuer: lets-encrypt
spec:
  rules:
  - host: robsonbot.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rbs-frontend-svc
            port:
              number: 80
