virtual-host-ingress-no-third-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress-no-third-host
spec:
  rules:
  - host: rbxrobotica.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rbx-svc
            port:
              number: 80
  - host: gph.rbxrobotica.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gph-svc
            port:
              number: 80
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rbx-svc
            port:
              number: 80
